--- a/SentimentAnalysisProject(Andica, Benedicto, Cautivar)/SentimentAnalysisProject(Andica, Benedicto, Cautivar).Rmd
+++ b/SentimentAnalysisProject(Andica, Benedicto, Cautivar)/SentimentAnalysisProject(Andica, Benedicto, Cautivar).Rmd
@@ -13,128 +13,76 @@ knitr::opts_chunk$set(echo = TRUE)
 library(dplyr)
 library(ggplot2)
 library(stringr)
+library(tidyverse)
+library(syuzhet)
+library(tm)            
+library(wordcloud)     
+library(RColorBrewer)
 
 tweetsDF <- read.csv("tweetsDF.csv")
 ```
 # Cleaning Text
 ```{r}
 tweetsDF$text <- iconv(tweetsDF$text, from = "UTF-8", to = "ASCII//TRANSLIT", sub = "")
+
 keywords <- "\\b(blackpink|yg|bornpink|lisa|jennie|rose|jisoo)\\b|:\\(\\(|&amp;|!|:\\(|&lt;/3|:|&lt;|/|~|iphone|android|nody_meow,|rogue_corq,|apobang27095028,|dessouslevide,|junacrawf0rd,|idkaybictdie,|lhcwesq4iebpbzf,|bpbiggestggindw,|lovemyhead,|akinsolaaliu,|nhlandmlb_fan,|virgini47003223,|angelscrown_,|stacebu,|starlight_sasha,|yuna4lifer,|diandianwong,|dillikahoshi,|tomie_jpg,|biyulving,|jshms9|1ov,|run_pjm,|lae__loner,|ariana_n64,|hdragees,|leemandelo,|purpleocean_i,|wildcatalum,|koreankrueger,|straykldswoo,|siang_ping,|lovemyheadwrap,|nyeongive,|cryptocross0ver|reexrco,|clarefl96567112,|wsbt,|killugoners,|maimechantel,|thealexateam,|ttaesthicx,|juliana62208602,|sadfuk99,|the_inspi,|hyckgasm,|hooriapashaa,|seungri_italy,|rawmilklvr,|laurettaland,|amaarzahid,|andiroo_,|__borntoslay_,|gothwolfjk,|3bbbinlove,|globalmyeon,|tianz17,|2korad,|doncastor4,|lesbi,|yolanda71545557,|mochixjm,|nunupaws,|simoncropp,|aoife,|btsvoque,|jeongpark52,|cloudychiwoo,|kaiewitherloavc,|yerimlvs,|mochixjm1,|tear_ofgod,|frothfather,|moatybuns,|richiericil,|maggiemae2019,|ckyunstd,|cyborgslament,|hyukasplush,|cxcileyyyy,|jungwoohehet,|lostinminhyuk,|crazyemio,|cbsaustin,|backtobleuside,|arches_in,|shelleypowers,|christineirishg,|bubblephehe,|minsmitten,|kaysfalling,|verrerenebi,|ntm23,|auroraluvbot,|my_drama_list,|kindordie,|kaede_zen,|luvskeehoo,"
 
-
-tweetsDF$text <- tolower(tweetsDF$text)
-tweetsDF$text <- gsub("https\\S+", "", tweetsDF$text)
-tweetsDF$text <- gsub("#", "", gsub("\n", " ", tweetsDF$text))
-tweetsDF$text <- gsub("([@?]\\S+)", "", tweetsDF$text)
-tweetsDF$text <- gsub("\\?", "", tweetsDF$text)
-tweetsDF$text <- gsub("\\b\\d{2}\\.\\d{2}\\.\\d{4}\\b", "", tweetsDF$text)
-tweetsDF$text <- gsub(keywords, "", tweetsDF$text, ignore.case = TRUE)
+tweetsDF$text <- tolower(tweetsDF$text)  
+tweetsDF$text <- gsub("https\\S+", "", tweetsDF$text) 
+tweetsDF$text <- gsub("#", "", gsub("\n", " ", tweetsDF$text)) 
+tweetsDF$text <- gsub("([@?]\\S+)", "", tweetsDF$text) 
+tweetsDF$text <- gsub("\\?", "", tweetsDF$text)  
+tweetsDF$text <- gsub("\\b\\d{2}\\.\\d{2}\\.\\d{4}\\b", "", tweetsDF$text)  
+tweetsDF$text <- gsub(keywords, "", tweetsDF$text, ignore.case = TRUE)  
 tweetsDF$text <- gsub("<a href=httptwitter.comdownloadandroid rel=nofollow>twitter for android<a>", "", tweetsDF$text)
 tweetsDF$text <- gsub("<a href= rel=nofollow>twitter web app<a>", "", tweetsDF$text)
 tweetsDF$text <- gsub("<a href=httptwitter.comdownloadiphone rel=nofollow>twitter for iphone<a>", "", tweetsDF$text)
-tweetsDF$text <- gsub("<a href=([^>]*?) rel=nofollow>([^<]*?)<a>", "", tweetsDF$text)
-tweetsDF$text <- gsub("30102022", "", tweetsDF$text)
-tweetsDF$text <- gsub("2238,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2237,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2236,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2235", "", tweetsDF$text)
-tweetsDF$text <- gsub("2300,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2332,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2331,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2330,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2200,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2228,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2229,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2225,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2218,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2215,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2211,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2208,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2159,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2155,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2150,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2148,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2149,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2151,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2152,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2153,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2154,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2147,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2146,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2145,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2140,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2141,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2142,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2143,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2144,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2130,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2131,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2132,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2133,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2134,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2135,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2136,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2137,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2138,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2139,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2231,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2230,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2020,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2100,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2120,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2121,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2122,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2123,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2124,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2125,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2126,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2127,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2128,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2129,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2130,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2110,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2109,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2108,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2107,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2106,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2105,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2104,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2103,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2102,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2101,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2050,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2051,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2052,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2053,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2054,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2055,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2056,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2057,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2058,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2059,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2060,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2030,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2031,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2032,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2033,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2034,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2035,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2036,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2037,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2038,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2039,", "", tweetsDF$text)
-tweetsDF$text <- gsub("2040,", "", tweetsDF$text)
-tweetsDF$text <- gsub("\\b(1[0-9]{3}|20[0-3][0-9])\\b", "", tweetsDF$text)
-tweetsDF$text <- gsub("\\b(20[0-9]{2}|2100)\\b", "", tweetsDF$text)
-tweetsDF$text <- gsub("\\b(21[0-9]{2}|2200)\\b", "", tweetsDF$text)
-tweetsDF$text <- gsub("\\b(22[0-9]{2}|2300)\\b", "", tweetsDF$text)
-
-
-
-
+tweetsDF$text <- gsub("<a href=([^>]*?) rel=nofollow>([^<]*?)<a>", "", tweetsDF$text) 
+tweetsDF$text <- gsub("30102022", "", tweetsDF$text)  
 tweetsDF$text <- gsub("\\s+", " ", tweetsDF$text)
 
-tweetsDF$text
+create_chunks <- function(df, start_row, end_row) {
+  return(df[start_row:end_row, ])
+}
+
+start_row <- 1
+end_row <- 1000
+chunk_data <- tweetsDF[start_row:end_row, ]
+
+valid_texts <- chunk_data$text[chunk_data$text != ""]
+cat("Number of valid texts before preprocessing: ", length(valid_texts), "\n")
+
+if (length(valid_texts) > 0) {
+  
+  corpus <- Corpus(VectorSource(valid_texts))
+  
+  corpus <- tm_map(corpus, content_transformer(tolower))
+  cat("Number of valid texts after converting to lowercase: ", length(corpus), "\n")
+  
+  corpus <- tm_map(corpus, removePunctuation)
+  cat("Number of valid texts after removing punctuation: ", length(corpus), "\n")
+  
+  corpus <- tm_map(corpus, removeNumbers)
+  cat("Number of valid texts after removing numbers: ", length(corpus), "\n")
+  
+  corpus <- tm_map(corpus, removeWords, stopwords("en"))
+  cat("Number of valid texts after removing stopwords: ", length(corpus), "\n")
+  
+  corpus <- tm_map(corpus, stripWhitespace)
+  cat("Number of valid texts after stripping whitespace: ", length(corpus), "\n")
+  
+  if (length(corpus) > 0) {
+    wordcloud(corpus, 
+              max.words = 100, 
+              random.order = FALSE, 
+              colors = brewer.pal(8, "Dark2"), 
+              scale = c(3, 0.5))
+  } else {
+    cat("No valid text left to create a word cloud.\n")
+  }
+} else {
+  cat("No valid texts available to create a word cloud.\n")
+}
 ```
 
 # Cleaning Dates
@@ -282,3 +230,30 @@ ggplot(TweetSourceCounts, aes(x = reorder(tweetSource, -Count), y = Count, fill 
 # The graph titled "Tweet Source Comparison" illustrates the distribution of tweets based on their source. The majority of tweets are posted using iPhone and Android, which dominate the chart with the highest counts. These two sources significantly outperform others, highlighting their widespread use among Twitter users. The third most common source is categorized as Others, though its count is notably lower compared to iPhone and Android. Meanwhile, platforms like iPad, ifttt, and dlvr.it contribute only a small fraction of tweets, indicating limited usage.
 
 # This distribution suggests that mobile devices, particularly iPhones and Android smartphones, are the primary tools for engaging on Twitter. The "Others" category likely represents a mix of niche or less common platforms. Automated tools like ifttt and dlvr.it are used sparingly, possibly for specific purposes such as scheduled or automated posts. Businesses and marketers looking to target Twitter users should prioritize strategies that cater to mobile users, particularly those on iPhone and Android devices, given their overwhelming share. Further analysis of the "Others" category might reveal additional insights about underutilized platforms or unique user behaviors.
+
+```{r}
+
+
+tweetsDF$sentiment <- get_sentiment(tweetsDF$text, method = "syuzhet")
+
+tweetsDF <- tweetsDF %>%
+  mutate(sentiment_category = case_when(
+    sentiment > 0 ~ "Positive",
+    sentiment == 0 ~ "Neutral",
+    sentiment < 0 ~ "Negative"
+  ))
+sentiment_by_source <- tweetsDF %>%
+  group_by(tweetSource, sentiment_category) %>%
+  summarize(count = n(), .groups = 'drop')
+
+ggplot(sentiment_by_source, aes(x = tweetSource, y = count, fill = sentiment_category)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(
+    title = "Sentiment Distribution by Tweet Source",
+    x = "Tweet Source",
+    y = "Number of Tweets",
+    fill = "Sentiment Category"
+  ) +
+  theme_minimal()
+```
+# The grouped bar chart provides valuable insights into the sentiment distribution of tweets across different sources, such as iPhone, Android, and other platforms. By examining the chart, we can observe which sentiment is most dominant for each tweet source. For example, tweets from platforms like "iPhone" may have a higher proportion of Positive sentiment, while sources like "Android" could show a mix of Positive, Neutral, and Negative sentiments. This variation suggests that sentiment trends differ across platforms. Additionally, the chart reveals the volume of tweets per source, highlighting how certain platforms, like iPhone, generate more tweets compared to others like "dlvr.it" or "IFTTT". This discrepancy may indicate the popularity of certain sources. From a strategic standpoint, understanding these sentiment trends can be crucial for businesses or analysts, as positive sentiments could indicate more favorable user engagement, while negative sentiments from specific sources may signal user dissatisfaction or areas for improvement. Overall, the graph helps in recognizing patterns that can inform marketing strategies, customer engagement, and platform-related decision-making.
